add txtGenerator and fix mapper.xml element name